tests/NormalTests/paczka1/small_fuzzy/51530514.err
Error in line 5: S114 S454 10,65
Error in line 9: lYH9F S114 78,5
